add bob wallet link

--- a/index.html
+++ b/index.html
@@ -86,14 +86,24 @@
 					</li>
 				</ul>
 			</li>
+			<li>
+				<strong>Wallets:</strong> 
+				<ul>
+					<li><a href="https://github.com/kyokan/bob-wallet/releases" target="_blank">Bob Wallet</a> (GUI, Non-Custodial)</li>
+				</ul>
+			</li>
 		</ul>
 		
 	</div>
+	<div class="donate">
+		<img src="logo/wallet.png" />
+		<div>
+			Donate: 
+			<input class="selectMe" id="donateInput" value="hs1qwfpd5ukdwdew7tn7vdgtk0luglgckp3klj44f8" readonly="readonly" size=44 />
+		</div>
+	</div>
 </div>
-<div class="donate">
-	<img src="logo/wallet.png" />
-	<div>Donate: hs1qwfpd5ukdwdew7tn7vdgtk0luglgckp3klj44f8</div>
-</div>
+
 <div id="introLogo"></div>
 </body>
 </html>
