--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 			<li>
 				<strong>Конфигурация:</strong> Первый запуск майнера запросит конфигурацию оборудования
 				<ul>
-					<li>Выберите видеоадаптеры GPUs</li>
+					<li>Выбор видеоадаптеров GPUs</li>
 					<li>Установка режима соло либо пул ( solo | pool )</li>
-					<li>ИНтенсивность: 11 наилучший вариант</li>
+					<li>Интенсивность: 11 наилучший вариант</li>
 					<li>Сложность майнинга на пуле: -1 для переменной сложности</li>
 					<li>
 						<strong>Адреса пулов:</strong>
