--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				</ul>
 			</li>
 			<li>
-				<strong>Configuration:</strong> La première exécution demande la configuration matérielle
+				<strong>Configuration:</strong> La première exécution nécessite la configuration matérielle
  
 				<ul>
 					<li>Selectionner les GPUs</li>
