add cn and es translation

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 		<option value="fr">Français</option>
 		<option value="ru">Русский</option>
 		<option value="de">Deutsch</option>
+		<option value="cn">中文 (简体)</option>
+		<option value="es">Español</option>
 	</select>
 </div>
 <div id="content">
