--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<ul>
 					<li>Для Windows: Двойной щелчек по &#039;dashboard.windows.bat&#039;</li>
 					<li>Для Linux: Двойной щелчек по &#039;dashboard.sh&#039;</li>
-					<li>Для Mac: double click &#039;dashboard.mac.command&#039;</li>
+					<li>Для Mac: Двойной щелчек по &#039;dashboard.mac.command&#039;</li>
 					<li>CLI запуск: <input id="cliCommand" class="selectMe" value="npm start" readonly="readonly" size=9 /> или <input id="cliCommand" class="selectMe" value="./dashboard.sh" readonly="readonly" size=14 /> </li>
 				</ul>
 			</li>
