--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<div id="header">HandyMiner King Cobra - Quick Start Guide</div>
 	<div id="main">
 		<ul>
-			<li><a id="downloadZIP" href="https://github.com/HandyMiner/HandyMiner-CLI/releases/download/KingCobra_0.0.3/HandyMiner_KingCobra_0.0.3.zip" target="_blank">Download HandyMiner Release ZIP</a> or <a id="downloadTAR" href="https://github.com/HandyMiner/HandyMiner-CLI/releases/download/KingCobra_0.0.3/HandyMiner_KingCobra_0.0.3.tar.xz" target="_blank">Download HandyMiner Release Tarball</a></li>
+			<li><a id="downloadZIP" href="https://github.com/HandyMiner/HandyMiner-CLI/releases/download/0.0.4/HandyMiner_HangryMode_0.0.4_Release.zip" target="_blank">Download HandyMiner Release ZIP</a> or <a id="downloadTAR" href="https://github.com/HandyMiner/HandyMiner-CLI/releases/download/0.0.4/HandyMiner_HangryMode_0.0.4_Release.tar.xz" target="_blank">Download HandyMiner Release Tarball</a></li>
 			<li>
 				<strong>Prerequisites:</strong>
 				<ul>
