add calculator links

--- a/content_es.html
+++ b/content_es.html
@@ -42,6 +42,13 @@
 				<li><a href="https://github.com/kyokan/bob-wallet/releases" target="_blank">Bob Wallet</a> (Interfaz Gráfica de Usuario, sin custodia)</li>
 			</ul>
 		</li>
+		<li>
+			<strong>Calculadoras:</strong> 
+			<ul>
+				<li><a href="https://HandyMiner.github.io/HandyCalculator/gpu.html" target="_blank">Calculadora de minería de GPU</a></li>
+				<li><a href="https://HandyMiner.github.io/HandyCalculator/index.html" target="_blank">Calculadora de ROI ASIC</a></li>
+			</ul>
+		</li>
 	</ul>
 	
 </div>
