--- a/content_fr.html
+++ b/content_fr.html
@@ -43,6 +43,13 @@
 				<li><a href="https://github.com/kyokan/bob-wallet/releases" target="_blank">Bob Wallet</a> (Interface Graphique, contrôlé par l’utilisateur)</li>
 			</ul>
 		</li>
+		<li>
+			<strong>Calculatrices:</strong> 
+			<ul>
+				<li><a href="https://HandyMiner.github.io/HandyCalculator/gpu.html" target="_blank">GPU Mining Calculator</a></li>
+				<li><a href="https://HandyMiner.github.io/HandyCalculator/index.html" target="_blank">ASIC ROI Calculator</a></li>
+			</ul>
+		</li>
 	</ul>
 	
 </div>
