--- a/content_ru.html
+++ b/content_ru.html
@@ -42,6 +42,13 @@
 				<li><a href="https://github.com/kyokan/bob-wallet/releases" target="_blank">Bob Wallet</a> (Графический интерфейс, децентрализованный)</li>
 			</ul>
 		</li>
+		<li>
+			<strong>Калькуляторы:</strong> 
+			<ul>
+				<li><a href="https://HandyMiner.github.io/HandyCalculator/gpu.html" target="_blank">GPU Mining Calculator</a></li>
+				<li><a href="https://HandyMiner.github.io/HandyCalculator/index.html" target="_blank">ASIC ROI Calculator</a></li>
+			</ul>
+		</li>
 	</ul>
 	
 </div>
