add ukranian translation, add links to mining calculators

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 		<option value="de">Deutsch</option>
 		<option value="cn">中文 (简体)</option>
 		<option value="es">Español</option>
+		<option value="ua">Україна</option>
 	</select>
 </div>
 <div id="content">
